Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <p><strong>Q1: Where can I find the source code?</strong></p>
 
-<p>A1: The exvim source code is running on github.</p>
+<p>A1: The exvim source code is running on <a href="https://github.com/jwu/exvim">github</a>.</p>
 
 <p><strong>Q2: Where can I find the installer and zip package?</strong></p>
 
@@ -74,20 +74,20 @@
 
 <p><strong>Q3: Where can I find the documentation?</strong></p>
 
-<p>A3: It is in the exVim Wiki.</p>
+<p>A3: It is in the <a href="http://www.ex-dev.com/exvim/wiki">exVim Wiki</a>.</p>
 
 <p><strong>Q4: Where can I submit an issue?</strong></p>
 
-<p>A4: It is recommended to submit an issue in github. For history reason, you still can submit the issue in Google Code, I will manually add your issue back to github if it is acceptable.</p>
+<p>A4: It is recommended to submit an issue in <a href="https://github.com/jwu/exvim">github</a>. For history reason, you still can submit the issue in <a href="http://code.google.com/p/exvim">Google Code</a>, I will manually add your issue back to github if it is acceptable.</p>
 
 <p><strong>Q5: Where can I ask you a question about vim or exVim?</strong></p>
 
-<p>A5: You can ask me questions through E-mail: karasaya@gmail.com.
+<p>A5: You can ask me questions through E-mail: <a href="karasaya@gmail.com">KarasAya@gmail.com</a>.
 I’m generally very busy, I may not reply you immediately but I promise I will read all the mails and reply them as soon as possible.</p>
 
 <p><strong>Q6: Do you have an official site?</strong></p>
 
-<p>A6: Yes, exVim is part of ex-dev project, and here is the exVim official page. This site also running the exVim Wiki.</p>
+<p>A6: Yes, exVim is part of <a href="http://www.ex-dev.com/">ex-dev</a> project, and here is the exVim official page. This site also running the <a href="http://www.ex-dev.com/exvim/wiki">exVim Wiki</a>.</p>
 
 <p><strong>Q7: Have you submit your project to Vim Scripts?</strong></p>
 
