--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 <a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h2>
 
 <ul>
-<li>exVim Official Page: <a href="http://www.ex-dev.com/exvim">http://www.ex-dev.com/exvim</a>
+<li>exVim Official Page: <a href="http://ex-dev.com/exvim">http://ex-dev.com/exvim</a>
 </li>
-<li>exVim Documentation: <a href="http://www.ex-dev.com/exvim/wiki">http://www.ex-dev.com/exvim/wiki</a>
+<li>exVim Documentation: <a href="http://exdev.webfactional.com/exvim/wiki/">http://exdev.webfactional.com/exvim/wiki/</a>
 </li>
 <li>exVim Source Code: <a href="https://github.com/exdev/exvim">https://github.com/exdev/exvim</a>
 </li>
@@ -74,7 +74,7 @@
 
 <p><strong>Q3: Where can I find the documentation?</strong></p>
 
-<p>A3: It is in the <a href="http://www.ex-dev.com/exvim/wiki">exVim Wiki</a>.</p>
+<p>A3: It is in the <a href="http://ex-dev.com/exvim/wiki">exVim Wiki</a>.</p>
 
 <p><strong>Q4: Where can I submit an issue?</strong></p>
 
@@ -87,7 +87,7 @@ I’m generally very busy, I may not reply you immediately but I promise I will 
 
 <p><strong>Q6: Do you have an official site?</strong></p>
 
-<p>A6: Yes, exVim is part of <a href="http://www.ex-dev.com/">ex-dev</a> project, and here is the exVim official page. This site also running the <a href="http://www.ex-dev.com/exvim/wiki">exVim Wiki</a>.</p>
+<p>A6: Yes, exVim is part of <a href="http://ex-dev.com/">ex-dev</a> project, and here is the exVim official page. This site also running the <a href="http://ex-dev.com/exvim/wiki">exVim Wiki</a>.</p>
 
 <p><strong>Q7: Have you submit your project to Vim Scripts?</strong></p>
 
